--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -35,9 +35,9 @@
                   {% endif %}
                 </div>
                 <div class="card-body">
-                  <h6 class="authors d-inline-block">{% include "home/utils/authors.html" with content=content %}</h6>
+                  <h6 class="authors d-inline-block">{% include "home/utils/authors.html" %}</h6>
                   <h6 class="d-inline-block w-auto text-left">{{ content.created }}</h6>
-                  <h4 class="card-title"><a href="{% url "home:view_content" content.pk %}" class="solid-link">{{ content|qualified_title }}</a></h4>
+                  <h4 class="card-title"><a href="{{ content.get_absolute_url }}" class="solid-link">{{ content|qualified_title }}</a></h4>
                 </div>
               </div>
             {% if forloop.counter|divisibleby:"2" %}</div>{% endif %}
@@ -77,7 +77,7 @@
               </div>
             {% endif %}
             <div class="card-body">
-              <h6 class="authors font-weight-bold">{% include "home/utils/authors.html" with content=content %}</h6>
+              <h6 class="authors font-weight-bold">{% include "home/utils/authors.html" %}</h6>
               <p class="story-created">{{ content.created }}</p>
               <h4 class="card-title"><a href="{{ content.get_absolute_url }}" class="solid-link">{{ content|qualified_title }}</a></h4>
               <p>
@@ -103,7 +103,7 @@
             {% endif %}
           </div>
           <div class="col-md-10">
-            {% include "home/content/summary.html" with content=content %}
+            {% include "home/content/summary.html" %}
           </div>
         </div>
         {% if not forloop.last %}<hr/>{% endif %}
@@ -125,7 +125,7 @@
               </div>
               <div class="col-9">
                 <a class="h5" href="{{ content.get_absolute_url }}">{{ content|qualified_title }}</a>
-                <h6><span class="text-muted">By</span> {% include "home/utils/authors.html" with content=content %}</h6>
+                <h6><span class="text-muted">By</span> {% include "home/utils/authors.html" %}</h6>
               </div>
             </div>
           </div>
