--- a/home/templates/home/section.html
+++ b/home/templates/home/section.html
@@ -8,29 +8,25 @@
 
 {% block content %}
   <div class="container">
-    <h1 class="container rounded display-4 mb-4 py-2 text-center text-uppercase section-header">{{ section.title }}</h1>
+    <h1 class="container rounded display-3 mb-4 py-2 text-center text-uppercase section-header">{{ section.title }}</h1>
 
-    <hr class="section-separator">
     {% for subsection, content in subsections %}
       {% reserve_content content 5 %}
       {% if new_content.count > 0 %}
-        <div class="row">
-          <div class="col-md-2">
-            <h3>
-              {% if subsection %}
-                <a class="solid-link" href="{% url "home:view_section" subsection.name %}">{{ subsection.title }} &raquo;</a>
-              {% else %}
-                Top Content
-              {% endif %}
-            </h3>
+        {% if subsection != section %}
+          <h1 class="display-4 mb-4 py-2 text-center text-uppercase section-header"><a href="{{ section.get_absolute_url }}">{{ subsection.title }}</a></h1>
+        {% endif %}
+        {% for content in new_content %}
+          <div class="row">
+            <div class="col-md-3">
+              {% if content|preview_image %}<img class="img-fluid" src="{{ content|preview_image }}"/>{% endif %}
+            </div>
+            <div class="col-md-9">
+              {% include "home/content/summary.html" with section=subsection %}
+            </div>
           </div>
-          <div class="col-md-10">
-            {% for content in new_content %}
-            {% include "home/content/summary.html" with content=content %}
-              <hr/>
-            {% endfor %}
-          </div>
-        </div>
+          {% if not forloop.last %}<hr/>{% endif %}
+        {% endfor %}
         <br/>
       {% endif %}
     {% endfor %}
