--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,7 +7,7 @@
 {% block content %}
   {% include "home/includes/index-sm-sidebar.html" %}
 
-  <div class="container">
+  <div class="medium-container">
     {% for section in main_sections %}
       <h1 class="display-4 mb-4 py-2 text-center text-uppercase section-header"><a href="{% url "home:view_section" section.name %}">{{ section.title }}</a></h1>
 
