--- a/home/templates/home/utils/authors.html
+++ b/home/templates/home/utils/authors.html
@@ -1,6 +1,11 @@
 {% for author in content.authors.all %}
-    {% if forloop.last and content.authors.count > 1 %} <span class="text-muted">and</span> {% endif %}
+{#    {% if forloop.last and content.authors.count > 1 %} <span class="text-muted">and</span> {% endif %}#}
     <a href="{% url "home:view_profile" author.pk %}" class="solid-link">{{ author.get_full_name }}</a>{% if not forloop.last and content.authors.count > 2 %},{% endif %}
 {% endfor %}
 
-{% if content.guest_authors %} <span class="text-muted">with</span> {{ content.guest_authors }} {% endif %}
+{% if content.guest_authors %}
+  {% if content.authors.count > 0 %}
+    <span class="text-muted">with</span>
+  {% endif %}
+  {{ content.guest_authors }}
+{% endif %}
