--- a/home/templates/home/content.html
+++ b/home/templates/home/content.html
@@ -98,6 +98,11 @@
       </div>
 
       <div class="col-md-3">
+        {% if content.sidebar_template %}
+          {% include content.sidebar_template %}
+          <br/>
+        {% endif %}
+
         <div class="card latest-stories">
           <div class="card-header mb-3">
             <h4 class="card-title mb-0">Latest Content</h4>
