--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,6 +3,7 @@
 {% block title %}Home{% endblock %}
 {% load home %}
 {% load static %}
+{% load imagekit %}
 
 {% block content %}
   {% include "home/includes/index-sm-sidebar.html" %}
@@ -15,8 +16,8 @@
       <div class="row mb-4">
         <div class="col-md-9">
           <div class="row section-featured-0 mb-2">
-            {% if new_content|preview_image %}
-              <img class="featured-img" src="{{ new_content|preview_image }}" alt="img not found">
+            {% if new_content|thumb %}
+              {% generateimage "home:huge_thumbnail" source=new_content|thumb -- class="featured-img" %}
             {% endif %}
             <div class="content">
               <h2 class="text-center mt-4 feature-title"><a href="{{ new_content.get_absolute_url }}">{{ new_content|qualified_title }}</a></h2>
@@ -30,8 +31,8 @@
               {% if not forloop.counter|divisibleby:"2" %}<div class="col-md-6 px-0">{% endif %}
               <div class="card mb-2 rounded-0 section-card-0">
                 <div class="img-wrapper">
-                  {% if content|preview_image %}
-                    <img class="card-img-top mx-auto rounded-0 d-block" src="{{ content|preview_image }}" alt="featurette-img"/>
+                  {% if content|thumb %}
+                    {% generateimage "home:huge_thumbnail" source=content|thumb -- class="card-img-top mx-auto rounded-0 d-block" %}
                   {% endif %}
                 </div>
                 <div class="card-body">
@@ -67,8 +68,8 @@
         {% for content in new_content %}
           <div class="card align-middle rounded-0 mb-4 section-card-1">
             <div class="img-wrapper">
-              {% if content|preview_image %}
-                <img class="card-img-top mx-auto rounded-0 d-block" src="{{ content|preview_image }}" alt="featurette-img"/>
+              {% if content|thumb %}
+                {% generateimage "home:huge_thumbnail" source=content|thumb -- class="card-img-top mx-auto rounded-0 d-block" %}
               {% endif %}
             </div>
             {% if section != content.section %}
@@ -98,8 +99,8 @@
       {% for content in new_content %}
         <div class="row">
           <div class="col-md-2">
-            {% if content|preview_image %}
-              <img class="img-fluid" src="{{ content|preview_image }}"/>
+            {% if content|thumb %}
+              {% generateimage "home:large_thumbnail" source=content|thumb -- class="img-fluid" %}
             {% endif %}
           </div>
           <div class="col-md-10">
@@ -119,8 +120,8 @@
           <div class="card">
             <div class="card-body row">
               <div class="col-3 pr-0">
-                {% if content|preview_image %}
-                  <img class="img-fluid" src="{{ content|preview_image }}"/>
+                {% if content|thumb %}
+                  {% generateimage "home:medium_thumbnail" source=content|thumb -- class="img-fluid" %}
                 {% endif %}
               </div>
               <div class="col-9">
@@ -140,8 +141,8 @@
             <h4 class="text-center text-uppercase section-header"><a href="{% url "home:view_section" section.name %}">{{ section.title }}</a></h4>
           </div>
           {% reserve_content section.all_content 5 %}
-          {% if new_content|first|preview_image %}
-            <img class="card-img-top" src="{{ new_content|first|preview_image }}" alt="Card image cap">
+          {% if new_content|first|thumb %}
+            {% generateimage "home:huge_thumbnail" source=new_content|first|thumb -- class="card-img-top" %}
           {% endif %}
           <ul class="list-group list-group-flush">
             {% for content in new_content %}
