--- a/home/templates/home/section.html
+++ b/home/templates/home/section.html
@@ -20,7 +20,7 @@
         {% for content in new_content %}
           <div class="row">
             <div class="col-md-3">
-              {% if content|thumb %}{% generateimage "home:large_thumbnail" source=content|thumb -- class="img-fluid" %}{% endif %}
+              {% if content|thumb %}<img class="img-fluid" src="{{ content|thumb:"large" }}"/>{% endif %}
             </div>
             <div class="col-md-9">
               {% include "home/content/summary.html" with section=subsection %}
