made messages more friendly on staff side

--- a/staff/templates/staff/users/list.html
+++ b/staff/templates/staff/users/list.html
@@ -2,11 +2,11 @@
 {% load core %}
 {% load crispy_forms_tags %}
 
-{% block title %}User List{% endblock %}
+{% block title %}Manage Users{% endblock %}
 
 {% block content %}
   {% csrf_token %}
-  <h1>User List</h1>
+  <h1>Manage Users</h1>
 
   <div class="card">
     <h5 class="card-header">Search users</h5>
