--- a/staff/templates/staff/content/list.html
+++ b/staff/templates/staff/content/list.html
@@ -3,27 +3,27 @@
 {% load staff %}
 {% load crispy_forms_tags %}
 
-{% block title %}Content List{% endblock %}
+{% block title %}Manage Content{% endblock %}
 
 {% block content %}
   {% csrf_token %}
-  <h1>Content</h1>
+  <h1>Manage Content</h1>
 
   {% if user|can:"core.create_content" %}
     <div class="row">
-      <div class="col-lg-3 col-sm-6 col-xs-12">
+      <div class="col-lg-3 col-sm-6">
         <a class="btn btn-primary btn-lg btn-block my-3" href="{% url "staff:content:create:story" %}">Create Story <i class="fas fa-book"></i></a>
       </div>
-      <div class="col-lg-3 col-sm-6 col-xs-12">
+      <div class="col-lg-3 col-sm-6">
         <a class="btn btn-primary btn-lg btn-block my-3" href="{% url "staff:content:create:gallery" %}">Create Gallery <i class="fas fa-images"></i></a>
       </div>
-      <div class="col-lg-3 col-sm-6 col-xs-12">
+      <div class="col-lg-3 col-sm-6">
         <a class="btn btn-primary btn-lg btn-block my-3" href="{% url "staff:content:create:image" %}">Create Image <i class="fas fa-camera"></i></a>
       </div>
-      <div class="col-lg-3 col-sm-6 col-xs-12">
+      <div class="col-lg-3 col-sm-6">
         <a class="btn btn-primary btn-lg btn-block my-3" href="{% url "staff:content:create:video" %}">Create Video <i class="fas fa-video"></i></a>
       </div>
-      <div class="col-lg-3 col-sm-6 col-xs-12">
+      <div class="col-lg-3 col-sm-6">
         <a class="btn btn-primary btn-lg btn-block my-3" href="{% url "staff:content:create:audio" %}">Create Audio <i class="fas fa-microphone"></i></a>
       </div>
       {# STUB_POLL #}
