--- a/staff/templates/staff/index.html
+++ b/staff/templates/staff/index.html
@@ -10,7 +10,7 @@
   <h3>Site</h3>
   <div class="row">
     <div class="col-sm-6 col-xs-12">
-      <a class="btn btn-info btn-lg btn-block my-3" href="{% url "staff:content:list" %}">Content <i class="fas fa-list-ul"></i></a>
+      <a class="btn btn-info btn-lg btn-block my-3" href="{% url "staff:content:list" %}">Manage Content <i class="fas fa-file-alt"></i></a>
     </div>
     {% if user|can:"core.edit_profile" %}
       <div class="col-sm-6 col-xs-12">
@@ -22,7 +22,7 @@
   {% if user|can:"auth.manage_users" or user.is_superuser %}
     <h3>Danger Zone</h3>
     {% if user|can:"auth.manage_users" %}
-      <a class="btn btn-danger btn-lg btn-block my-3" href="{% url "staff:users:list" %}">User List <i class="fas fa-users"></i></a>
+      <a class="btn btn-danger btn-lg btn-block my-3" href="{% url "staff:users:list" %}">Manage Users <i class="fas fa-users"></i></a>
     {% endif %}
     {% if user.is_superuser %}
       <a class="btn btn-danger btn-lg btn-block my-3" href="{% url "admin:index" %}">Django Admin <i class="fas fa-unlock-alt"></i></a>
