--- a/home/templates/home/content/comment.html
+++ b/home/templates/home/content/comment.html
@@ -1,8 +1,10 @@
 <style>
-    .comment{
+    .comment {
         background-color: #c4b59d;
-        padding: 2px
+        padding: 2px;
     }
+
+    .
 </style>
 
 <div class="comment">
