--- a/home/templates/home/content.html
+++ b/home/templates/home/content.html
@@ -4,6 +4,7 @@
 {% load home %}
 {% load core %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block title %}{{ content|qualified_title }}{% endblock %}
 
@@ -98,7 +99,11 @@
             {% render_comment comment %}
         {% endfor %}
 
-        <a href="{% url "home:submit_comment" content.pk %}" class="solid-link">Comment</a>
+        {% if form %}
+            {% crispy form form.helper %}
+        {% else %}
+            <a href="{% url "home:submit_comment" content.pk %}" class="solid-link">Comment</a>
+        {% endif %}
       </div>
 
       <div class="col-md-3">
