--- a/home/templates/home/content/comment.html
+++ b/home/templates/home/content/comment.html
@@ -1,10 +1,9 @@
 <style>
     .comment {
-        background-color: #c4b59d;
+        background-color: #ffffff;
         padding: 2px;
+        color: #000000;
     }
-
-    .
 </style>
 
 <div class="comment">
