some slight fixes

--- a/home/templates/home/about/about.html
+++ b/home/templates/home/about/about.html
@@ -128,7 +128,7 @@
     <h5>Email</h5>
     <p>
       The Silver Chips Online editors can be reached at <a href="mailto:editors.sco@gmail.com">editors.sco@gmail.com</a>.
-      Our staff sponsor, Michelle Ellie, can be reached at
+      Our staff sponsor, Michelle Elie, can be reached at
       <a href="mailto:Michelle_L_Edwards@mcpsmd.org">Michelle_L_Edwards@mcpsmd.org</a>.
     </p>
 
