--- a/home/templates/home/includes/footer.html
+++ b/home/templates/home/includes/footer.html
@@ -26,7 +26,7 @@
     <div class="site-footer-right">
       <p class="footer-company-about">
         <span>About us</span>
-        Silver Chips Online is the online version of Silver Chips, the award-winning newspaper published by students from Montgomery
+        Silver Chips Online is the award-winning online newspaper published by students from Montgomery
         Blair High School in Silver Spring, Maryland.
       </p>
       <div class="footer-icons">
