--- a/home/templates/home/section.html
+++ b/home/templates/home/section.html
@@ -15,7 +15,7 @@
       {% reserve_content content 5 %}
       {% if new_content.count > 0 %}
         {% if subsection != section %}
-          <h1 class="display-4 mb-4 py-2 text-center text-uppercase section-header"><a href="{{ section.get_absolute_url }}">{{ subsection.title }}</a></h1>
+          <h1 class="display-4 mb-4 py-2 text-center text-uppercase section-header"><a href="{{ subsection.get_absolute_url }}">{{ subsection.title }}</a></h1>
         {% endif %}
         {% for content in new_content %}
           <div class="row">
