--- a/home/templates/home/content.html
+++ b/home/templates/home/content.html
@@ -8,8 +8,8 @@
 {% block title %}{{ content|qualified_title }}{% endblock %}
 
 {% block content %}
-  <script defer src="{% static "home/scripts/content.js" %}"></script>
-  
+  <script src="{% static "home/scripts/content.js" %}"></script>
+
   <div class="modal fade modal-lightbox" tabindex="-1" role="dialog" id="lightboxModal">
     <div class="modal-dialog modal-dialog-centered" role="document" id="lightboxModalDialog">
       <div class="modal-content">
