--- a/home/templates/home/includes/navbar.html
+++ b/home/templates/home/includes/navbar.html
@@ -3,7 +3,7 @@
 <div class="navbar-wrapper fixed-top not-scrolled">
   <header class="navbar-wrapper-header w-100">
     {# logo for desktop #}
-    <a class="logo mx-auto py-3 d-none d-lg-block" href="#"> {% include "home/includes/_logo-svg.html" %} </a>
+    <a class="logo mx-auto py-3 d-none d-lg-block" href="{% url "home:index" %}"> {% include "home/includes/_logo-svg.html" %} </a>
 
     <li id="search" class="d-none d-lg-block">
       <button class="nav-link d-inline-block mx-4" data-toggle="modal" data-target="#searchModal"><i class="fa fa-search"></i></button>
