--- a/home/templates/home/about/about.html
+++ b/home/templates/home/about/about.html
@@ -127,7 +127,7 @@
 
     <h5>Email</h5>
     <p>
-      The Silver Chips Online editors, {% for eic in eics %}{% if loop.index0 > 0 %} and {% endif %}{{ eic.get_full_name }}{% endfor %}, can be reached at <a href="mailto:editors.sco@gmail.com">editors.sco@gmail.com</a>.
+      The Silver Chips Online editors, {% for eic in eics %}{% if loop.index > 0 %} and {% endif %}{{ eic.get_full_name }}{% endfor %}, can be reached at <a href="mailto:editors.sco@gmail.com">editors.sco@gmail.com</a>.
       Our staff sponsor, Michelle Elie, can be reached at
       <a href="mailto:Michelle_L_Edwards@mcpsmd.org">Michelle_L_Edwards@mcpsmd.org</a>.
     </p>
