--- a/home/templates/home/about/about.html
+++ b/home/templates/home/about/about.html
@@ -127,10 +127,17 @@
 
     <h5>Email</h5>
     <p>
-      The Silver Chips Online editors, {% for eic in eics %} {% if loop.index %}and{% endif %} {{ eic.get_full_name }}{% endfor %}, can be reached at <a href="mailto:editors.sco@gmail.com">editors.sco@gmail.com</a>.
+      The Silver Chips Online editors can be reached at <a href="mailto:editors.sco@gmail.com">editors.sco@gmail.com</a>.
       Our staff sponsor, Michelle Elie, can be reached at
       <a href="mailto:Michelle_L_Edwards@mcpsmd.org">Michelle_L_Edwards@mcpsmd.org</a>.
     </p>
+    
+    The current Editor in Chiefs are:
+    <ul>
+    {% for eic in eics %}
+      <li>{{ eic.get_full_name }}</li>
+    {% endfor %}
+    </ul>
 
     <p>To contact other staff members individually, please visit our <a href="{% url 'home:about:staff' %}">staff page</a>.</p>
   </div>
