--- a/home/templates/home/about/about.html
+++ b/home/templates/home/about/about.html
@@ -132,7 +132,7 @@
       <a href="mailto:Michelle_L_Edwards@mcpsmd.org">Michelle_L_Edwards@mcpsmd.org</a>.
     </p>
     
-    The current Editor in Chiefs are:
+    The current Editor(s) in Chief are:
     <ul>
     {% for eic in eics %}
       <li>{{ eic.get_full_name }}</li>
