Change header and body font
Change header font to Playfair Display and body to Roboto

--- a/home/static/home/styles/_custom-settings.scss
+++ b/home/static/home/styles/_custom-settings.scss
@@ -1,7 +1,7 @@
 /* FONTS */
-@import url('https://fonts.googleapis.com/css?family=Oswald|Open+Sans|Playfair+Display|Fugaz+One');
-$site-header-font: "Oswald", serif;
-$site-paragraph-font: "Open Sans", sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Oswald|Open+Sans|Playfair+Display|Fugaz+One|Roboto');
+$site-header-font: "Playfair Display", serif;
+$site-paragraph-font: "Roboto", sans-serif;
 $playfair-display: "Playfair Display", sans-serif;
 $fugaz-one: "Fugaz One", serif;
 
