--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -68,7 +68,7 @@
           <div class="card align-middle rounded-0 mb-4 section-card-1">
             <div class="img-wrapper">
               {% if content|thumb %}
-                <img class="card-img-top mx-auto rounded-0 d-block" src="{{ content|thumb:"medium" }}"/>
+                <img class="card-img-top mx-auto rounded-0 d-block" style="max-height: 400px" src="{{ content|thumb:"huge" }}"/>
               {% endif %}
             </div>
             {% if section != content.section %}
