--- a/home/static/home/styles/styles.scss
+++ b/home/static/home/styles/styles.scss
@@ -153,15 +153,16 @@ html {
 
     .img-wrapper {
         overflow: hidden;
+	position: relative;
+	max-height: 250px;
     }
 
     .card-img-top {
         position: relative;
         float: left;
         transition: all 0.5s ease 10ms;
-
         &:hover {
-            transform: scale(1.2)
+            transform: scale(1.2);
         }
 
         &:after {
