--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -106,7 +106,7 @@
           <div class="card align-middle rounded-0 mb-4 section-card-1">
             <div class="img-wrapper">
               {% if content|thumb %}
-                <img class="card-img-top mx-auto rounded-0 d-block" style="width:100%; max-height: 400px; overflow: hidden" src="{{ content|thumb:"huge" }}"/>
+                <img class="card-img-top mx-auto rounded-0 d-block" style="overflow: hidden" src="{{ content|thumb:"huge" }}"/>
               {% endif %}
             </div>
             {% if section != content.section %}
