Font request change

--- a/home/static/home/styles/styles.scss
+++ b/home/static/home/styles/styles.scss
@@ -74,7 +74,7 @@ html {
 
         .feature-title a, .lead, a {
             display: inline-block;
-            font-family: $fugaz-one;
+            font-family: $playfair-display;
             color: $site-white;
         }
     }
@@ -108,7 +108,7 @@ html {
 
         .feature-title a, .lead, a {
             display: inline-block;
-            font-family: $fugaz-one;
+            font-family: $playfair-display;
             color: $site-white;
         }
     }
@@ -142,7 +142,7 @@ html {
 
         .feature-title a, .lead, a {
             display: inline-block;
-            font-family: $fugaz-one;
+            font-family: $playfair-display;
             color: $site-gray;
         }
     }
@@ -194,7 +194,7 @@ html {
 
     .card-body {
         .story-created { font-size: 0.75rem; }
-        h4 a { font-family: $fugaz-one; }
+        h4 a { font-family: $playfair-display; }
     }
 }
 
@@ -203,7 +203,7 @@ html {
 
     .card-body {
         .story-created { font-size: 0.75rem; }
-        h4 a { font-family: $fugaz-one; }
+        h4 a { font-family: $playfair-display; }
     }
 }
 
