Silly missing character in url

--- a/home/templates/home/mbhs_carousel.html
+++ b/home/templates/home/mbhs_carousel.html
@@ -23,7 +23,7 @@
 <div id="silverchips">
 
 {% for story in stories %}
-    <a class="scopos" pos="{{ forloop.counter }}" href="https://silverchips.mbhs.edu{{ story.pk }}" cap="{{ story.title }}">
+    <a class="scopos" pos="{{ forloop.counter }}" href="https://silverchips.mbhs.edu/{{ story.pk }}" cap="{{ story.title }}">
         <div class="sco-thumb">
             <img src="https://silverchips.mbhs.edu{{ story.cover.source.url }}" id="image{{ forloop.counter }}" alt="{{ story.title }}" class="sco"/>
         </div>
