--- a/home/static/home/styles/imports/_navbar-styles.scss
+++ b/home/static/home/styles/imports/_navbar-styles.scss
@@ -9,6 +9,17 @@
  }
 
 //LOGO
+/* IE HACK USING INVALID SELECTOR */
+*::-ms-backdrop, :root .navbar-wrapper-header .logo,
+:root .navbar .logo {
+    position: relative;
+    height: 70px;
+    & svg {
+        position: absolute;
+        top: 0;
+        padding: 1rem 0;
+    }
+}
 .navbar-wrapper-header .logo svg g { fill: $site-header; }
 .navbar .logo svg g { fill: $site-header; }
 
