--- a/home/templates/home/mbhs_carousel.html
+++ b/home/templates/home/mbhs_carousel.html
@@ -1,7 +1,7 @@
 <style>
 .sco-thumb {
   position: relative;
-  width: 271px;
+  width: 278px;
   height: 139px;
   overflow: hidden;
 }
@@ -9,7 +9,7 @@
   position: absolute;
   left: 50%;
   top: 50%;
-  height: auto;
+  height: auto !important;
   width: 100%;
 }
 </style>
