Add google analytics

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -11,6 +11,16 @@
         <link rel="shortcut icon" href="{% static "favicon.ico" %}">
         {% include "home/includes/head.html" %}
         <link type="text/css" rel="stylesheet" href="{% static "home/styles/styles.scss"|compile %}">
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128708283-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-128708283-1');
+        </script>
     </head>
 
     <body>
