--- a/home/templates/home/section.html
+++ b/home/templates/home/section.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load home %}
 {% load imagekit %}
+{% load el_pagination_tags %}
 
 {% block title %}
   {{ section.title }}
@@ -17,7 +18,8 @@
         {% if subsection != section %}
           <h1 class="display-4 mb-4 py-2 text-center text-uppercase section-header"><a href="{{ subsection.get_absolute_url }}">{{ subsection.title }}</a></h1>
         {% endif %}
-        {% for content in new_content %}
+        {% paginate 2,5 new_content as paginated_content %}
+        {% for content in paginated_content %}
           <div class="row">
             <div class="col-md-3">
               {% if content|thumb %}<img class="img-fluid" src="{{ content|thumb:"large" }}"/>{% endif %}
@@ -28,6 +30,11 @@
           </div>
           {% if not forloop.last %}<hr/>{% endif %}
         {% endfor %}
+        {% if subsection != section %}
+          <h4 class="title display-5 mb-4 py-2 text-center title"><a href="{{ subsection.get_absolute_url }}">See more {{ subsection.title }} {{ section.title }}</a></h1>
+        {% else %}
+        {% show_pages %}
+        {% endif %}
         <br/>
       {% endif %}
     {% endfor %}
